--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.6' # or your version
+          flutter-version: '3.108.2'
           channel: 'stable'
 
       - name: Install dependencies
